# personal_knowledge_assistant

./: README.md  build.py  pyproject.toml
personal_knowledge_assistant/: agent.py  config.py  embeddings.registry.py  llm_registry.py  main.py  model.py  providers.py  qa_agent.py  rag.py  registry.py
