[tool.poetry]
name = "personal_knowledge_assistant"
version = "0.1.0"
description = "A personal knowledge assistant to learn ML, RAG, and LangGraph."
authors = ["Abhinav Upadhya <abhinav@example.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
ollama = "^0.4.0"
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-text-splitters = "^0.3.0"
langchain-chroma = "^0.2.0"
langchain-ollama = "^0.2.0"
langchain-openai = "^0.2.0"
langchain-huggingface = "^0.2.0"
torch = "^2.12.1"
pypdf = "^5.0.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"