[tool.poetry]
name = "personal_knowledge_assistant"
version = "0.1.0"
description = "A personal knowledge assistant to learn ML, RAG, and LangGraph."
authors = ["Abhinav Upadhya <abhinav@example.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
ollama = ">=0.6.0,<1.0.0"
langchain = ">=1.3"
langchain-core = ">=1.4"
langchain-text-splitters = ">=0.3"
langchain-chroma = ">=0.2"
langchain-ollama = ">=1.1"
langchain-openai = ">=1.3"
langchain-huggingface = ">=1.0"
pypdf = ">=5.0"
torch = ">=2.12.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"